# geotermal-pinn

./: .gitignore  README.md  pyproject.toml
pinns/data/datasets/: __init__.py  mesh.py
pinns/data/domains/: __init__.py  one_dim.py  two_dim.py
pinns/models/: __init__.py  mlp.py
pinns/utils/: __init__.py  convert_fn.py  grad_fn.py  io_utils.py  logger.py  loss_balancer.py
